; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_ag.c_xfs_btroot_init.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_ag.c_xfs_btroot_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_mount = type { i32 }
%struct.xfs_buf = type { i32 }
%struct.aghdr_init_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xfs_mount*, %struct.xfs_buf*, %struct.aghdr_init_data*)* @xfs_btroot_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xfs_btroot_init(%struct.xfs_mount* %0, %struct.xfs_buf* %1, %struct.aghdr_init_data* %2) #0 {
  %4 = alloca %struct.xfs_mount*, align 8
  %5 = alloca %struct.xfs_buf*, align 8
  %6 = alloca %struct.aghdr_init_data*, align 8
  store %struct.xfs_mount* %0, %struct.xfs_mount** %4, align 8
  store %struct.xfs_buf* %1, %struct.xfs_buf** %5, align 8
  store %struct.aghdr_init_data* %2, %struct.aghdr_init_data** %6, align 8
  %7 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %8 = load %struct.xfs_buf*, %struct.xfs_buf** %5, align 8
  %9 = load %struct.aghdr_init_data*, %struct.aghdr_init_data** %6, align 8
  %10 = getelementptr inbounds %struct.aghdr_init_data, %struct.aghdr_init_data* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.aghdr_init_data*, %struct.aghdr_init_data** %6, align 8
  %13 = getelementptr inbounds %struct.aghdr_init_data, %struct.aghdr_init_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @xfs_btree_init_block(%struct.xfs_mount* %7, %struct.xfs_buf* %8, i32 %11, i32 0, i32 0, i32 %14)
  ret void
}

declare dso_local i32 @xfs_btree_init_block(%struct.xfs_mount*, %struct.xfs_buf*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
